# pulserverlib

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  NOTES.md  PROMPTS.md  README.rst  pyproject.toml
ATTIC/attic/docs/: specs.rst
ATTIC/attic2/tests/csrc/: CMakeLists.txt  test_block.c  test_concatenate.c  test_math.c  test_runner.c  test_segments.c  test_seq.c
ATTIC/csrcOld/: CMakeLists.txt
ATTIC/csrcOld/attic/: pulserverlib.h  pulserverlib_methods.c  pulserverlib_methods.h
ATTIC/csrcOld/pulseq/: example_error.c  pulseqlib.h  pulseqlib_methods.c  pulseqlib_methods.h
ATTIC/design/: __init__.py  excitation.py  kernels.py  phasor.py  readout.py
ATTIC/pulseq/: __init__.py  ordering.py  rf.py  sampling.py  utils.py
ATTIC/pulseq/_extension/: _vds_wrapper.cpp
csrc/: CMakeLists.txt  external_kiss_fft.h  external_kiss_fft_guts.h  external_kiss_fft_log.h  external_kiss_fftr.c  external_kiss_fftr.h  external_md5.h  pulseqlib_bridge.c  pulseqlib_bridge.h  pulseqlib_cache.c  pulseqlib_cache_seqdesc.c  pulseqlib_config.h  pulseqlib_core.c  pulseqlib_dedup.c  pulseqlib_error.c  pulseqlib_freqmod.c  pulseqlib_getters.c  pulseqlib_internal.h  pulseqlib_methods.h  pulseqlib_parse.c  pulseqlib_protocol.c  pulseqlib_protocol.h  pulseqlib_safety.c  pulseqlib_seqdesc.c  pulseqlib_structure.c  pulseqlib_trajectory.c  pulseqlib_types.h  pulseqlib_waveforms.c
docs/explanations/: mechanical_resonance_safety.md  mechanical_resonance_safety.rst
docs/reference/: public_api.md
examples/cexamples/: example_check.c  example_errorhandling.c  example_geninstructions.c  example_scanloop.c  example_startup.c  example_uieval.c  example_vendorlib.h  safety_with_external_sequence.c
examples/cppexamples/: safety_with_external_sequence.cpp
extensions/: collection.hpp  pulseqlib.hpp  types.hpp
matlab/+pge/: SequenceCollection.m  deserialize.m
matlab/+pge/private/: get_tr_waveforms.m  grad_spectrum_impl.m  plot_impl.m  pulseqlib_mex.cpp  validate.m  validate_impl.m
matlab/+pulserver/: serialize.m
matlab/+pulserver/private/: check.m  plot_impl.m  pns_impl.m  report_impl.m
migration/: README.md
migration/gadgetron-tools/: .gitattributes  .gitignore  README.md
migration/gadgetronlib/: README.md  pyproject.toml
migration/gadgetronlib-source/: PROMPTS.md  README.md
migration/gadgetronlib-source/extensions/gadgetronlib/: CMakeLists.txt  GadgetronClient.h  NHLBICompression.h  README.md  gadgetron_ismrmrd_client.cpp  gadgetron_ismrmrd_client.h  reader_wait_state.cpp  reader_wait_state.h
migration/gadgetronlib-source/extensions/ge2mrdlib/: CMakeLists.txt  GERawConverter.cpp  GERawConverter.h  GenericConverter.cpp  GenericConverter.h  SequenceConverter.h  ismrmrd_user_parameter_overrides.cpp  ismrmrd_user_parameter_overrides.h
migration/gadgetronlib/docker/: Dockerfile
migration/pulserver-interpreter/: PROMPTS.md  README.md
migration/pulserverlib-source/: AGENTS.md  PROMPTS.md  README.md  README.rst
migration/pulserverlib-source/csrc/: CMakeLists.txt  external_kiss_fft.c  external_md5.c  external_md5.h  pulseqlib_core.c  pulseqlib_error.c  pulseqlib_freqmod.c  pulseqlib_getters.c  pulseqlib_internal.h  pulseqlib_math.c  pulseqlib_parse.c  pulseqlib_safety.c  pulseqlib_structure.c  pulseqlib_types.h
migration/pulserverlib-source/extensions/: collection.hpp  error.hpp
migration/pulserverlib-tools/: .pre-commit-config.yaml  PROMPTS.md  README.md
migration/pulserverlib-tools/docs/: acoustic_check_detail.rst  api.rst  api_overview.rst  (+4 more)
python/pge/: __init__.py
python/pulserver/: __init__.py
scripts/: build_and_run_ctests.sh  build_cpp_tests.sh  build_ctests.sh  check_c89_compliance.sh  run_cpp_tests.sh  run_ctests.sh  setup_mex.m
tests/cpptests/: CMakeLists.txt  test_ismrmrd_user_parameter_overrides.cpp  test_reader_wait_state.cpp
tests/ctests/: CMakeLists.txt  test_canonical_tr_mprage_noncart.c  test_helpers.h  test_io.c  test_protocol.c  test_rf_stats.c  test_runner.c  test_safety_grad.c  test_seg_helpers.h  test_sequences.c
tests/ctests/build_asan/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/ctests/build_asan/csrc_build/: Makefile  cmake_install.cmake
tests/data/: 01_grad_amplitude_violation.seq  01_ok_trap_extended_trap.seq  02_fail_trap_then_startshigh.seq  03_fail_startshigh_first.seq  04_fail_delay_then_allhigh.seq  06_fail_delay_then_startshigh.seq  09_fail_rot_identity.seq  10_fail_rot_first_block.seq  12_ok_rot_extended_delay.seq  13_fail_rot_delay_then_startshigh.seq  16_fail_rot_diff_rotation_1.seq  17_fail_rot_diff_rotation_2.seq  bssfp_2d_1sl_1avg.seq  bssfp_2d_1sl_1avg_meta.txt  bssfp_2d_1sl_3avg.seq  bssfp_2d_3sl_1avg.seq  bssfp_2d_3sl_1avg_meta.txt  bssfp_2d_3sl_3avg.seq  bssfp_2d_3sl_3avg_meta.txt  epi_2d_1sl_1avg_meta.txt  epi_2d_3sl_1avg_meta.txt  fse_2d_1sl_3avg_meta.txt  gre_2d_1sl_1avg_meta.txt  gre_2d_1sl_3avg.seq  gre_2d_1sl_3avg_meta.txt  gre_2d_3sl_1avg.seq  gre_2d_3sl_3avg_meta.txt  mprage_2d_1sl_1avg.seq  mprage_2d_1sl_1avg_meta.txt  mprage_2d_3sl_1avg.seq  mprage_nav_2d_1sl_1avg.seq  mprage_nav_2d_1sl_1avg_meta.txt  mprage_nav_2d_1sl_3avg_meta.txt  mprage_nav_2d_3sl_3avg.seq  mprage_noncart_3d_1sl_1avg_userotext0.seq  mprage_noncart_3d_1sl_1avg_userotext0_meta.txt  mprage_noncart_3d_1sl_1avg_userotext1.seq  mprage_noncart_3d_1sl_1avg_userotext1_meta.txt  mprage_noncart_3d_1sl_3avg_userotext1_meta.txt  mprage_noncart_3d_3sl_1avg_userotext0.seq  (+7 more)
tests/generators/: README.md  TruthBuilder.m  generate_grad_continuity_test_cases.m  generate_grad_limits_test_cases.m  generate_rf_test_cases.m  generate_test_sequences.m  generate_test_sequences.m~
tests/matlab/: test_sequence_collection.m
tests/python/: __init__.py  conftest.py  test_cache_sections.py  test_pge_wrapper_methods.py  test_plugin_contract.py  test_recon_server_config.py  test_recon_server_connection.py  test_recon_server_main.py  test_recon_server_plugin_loader.py  test_recon_server_server.py  test_recon_server_sigpy_reference.py  test_sequence_collection.py
tests/utils/: README.md  SCHEMA.md  generate_segmentation_test_sequences.m.bak  run_generators.m
(+340 files in other folders)
