[build-system]
build-backend = "scikit_build_core.build"
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.12",
  "setuptools",
  "setuptools_scm[toml]",
  "wheel",
]

[project]
name = "pge"
description = "A C library for parsing and automatic segmentation of Pulseq sequences."
readme = "README.rst"
requires-python = ">=3.10"
dynamic = ["version"]
license = {file = "LICENSE.txt"}
keywords = [
  "pulseq", 
  "mri", 
  "sequence-design", 
  "pulse-sequences", 
  "mri-sequences",
]
authors = [
  {name = "Matteo Cencini", email = "matteo.cencini@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "numpy>=2.0",
  "scipy",
  "matplotlib",
  "pypulseq",
  "ipywidgets",
]

[project.optional-dependencies]
dev = [
  "ruff", 
  "isort",
  "pytest", 
  "pytest-black", 
  "pytest-cov", 
  "pytest-sugar", 
  "pytest-xdist",
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-sugar",
  "pytest-xdist",
]
doc = [
  "sphinx", 
  "pydata-sphinx-theme", 
  "myst-nb", 
  "matplotlib", 
  "sphinx-copybutton",
]

[project.urls] 
"Homepage" = "https://github.com/pulserver/pulserverlib"
"Bug Reports" = "https://github.com/pulserver/pulserverlib/issues"
"Source" = "https://github.com/pulserver/pulserverlib"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.setuptools.packages.find]
where=["python"]

[tool.setuptools_scm]
write_to = "python/pge/_version.py"
version_scheme = "python-simplified-semver"
local_scheme="no-local-version"
fallback_version="v99-dev"

[tool.ruff]
src = ["python", "tests"]
line-length = 120
extend-exclude = [ 
"example_*.py" , 
"*_version.py", 
"test_*.py", 
"tests", 
]

[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "COM", # flake8-commas
  # "D",   # pydocstyle
  # "E",   # pycodestyle errors
  "F", # Pyflakes
  # "FA", # flake8-future-annotations
  "I", # isort
  # "N",   # pep8-naming
  "NPY", # NumPy-specific rules
  "RUF", # Ruff-specific rules
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  # "UP",  # pyupgrade
  "PIE", # flake8-pie
  "PTH", # flake8-use-pathlib
  "Q",   # flake8-quotes
  "W",   # pycodestyle warnings
  "YTT", # flake8-2020
  # "ERA", # flake8-eradicate
]

ignore = [
  "B028",   #  explicit "stacklevel" arg in warnings
  "COM812", #  missing-trailing-comma (conflict with formatter)
  "PTH123", #  use of Path.open
  "S101",   #  use of assert
  "S307",   #  use of possibly insecure eval function
  "S311",   #  standard pseudo-random generators
  "S324",   #  insecure hash function
  "SIM108", #  if-else-block-instead-of-if-exp
  "SIM115", #  use of context manager
]

[tool.ruff.lint.per-file-ignores]
"python/pge/core/_plot.py" = ["S314"]
"python/pge/core/_validate.py" = ["S314"]

[tool.isort]
profile="black"
force-single-line = false
split-on-trailing-comma = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.typos.default]
locale = "en-us"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath  = ["tests"]
testpaths=["tests"]
addopts = [
  "--import-mode=importlib"
]

[tool.pylsp-mypy]
enabled = false
live_mode = false

[tool.mypy]
ignore_missing_imports = true

[tool.codespell]
skip = '.git*'
check-hidden = true
ignore-words-list = 'te,fo,nd,maked,datas,iten,itel,tread'